TP4/ex4.output
Grammaire

    0 $accept: program $end

    1 program: declaration_list statement_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 statement_list: statement_list statement
    5               | statement

    6 statement: compound_statement
    7          | selection_statement
    8          | iteration_statement
    9          | expression_statement
   10          | print_statement
   11          | return_statement

   12 compound_statement: '{' '}'
   13                   | '{' statement_list '}'
   14                   | '{' declaration_list '}'
   15                   | '{' declaration_list statement_list '}'

   16 selection_statement: IF '(' expression ')' begin_if statement end_if else statement fi

   17 else: ELSE statement
   18     | ε

   19 begin_if: ε

   20 end_if: ε

   21 fi: ε

   22 iteration_statement: WHILE '(' expression ')' statement
   23                    | FOR '(' expression_statement expression_statement ')' statement
   24                    | FOR '(' expression_statement expression_statement expression ')' statement

   25 expression_statement: ';'
   26                     | expression ';'
   27                     | ID '=' expression ';'

   28 print_statement: PRINT '(' expression ')' ';'

   29 return_statement: RETURN ';'
   30                 | RETURN expression ';'

   31 declaration: TYPE ID ';'
   32            | TYPE ID '=' expression ';'

   33 expression: '(' expression ')'
   34           | expression '+' expression
   35           | expression '-' expression
   36           | expression '*' expression
   37           | expression '/' expression
   38           | expression '%' expression
   39           | expression '^' expression
   40           | expression EQ expression
   41           | expression NEQ expression
   42           | expression AND expression
   43           | expression OR expression
   44           | expression GT expression
   45           | expression LT expression
   46           | NUMBER
   47           | BOOLEAN
   48           | ID


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '%' (37) 38
    '(' (40) 16 22 23 24 28 33
    ')' (41) 16 22 23 24 28 33
    '*' (42) 36
    '+' (43) 34
    '-' (45) 35
    '/' (47) 37
    ';' (59) 25 26 27 28 29 30 31 32
    '=' (61) 27 32
    '^' (94) 39
    '{' (123) 12 13 14 15
    '}' (125) 12 13 14 15
    error (256)
    NUMBER <integer> (258) 46
    BOOLEAN <boolean> (259) 47
    ID <id> (260) 27 31 32 48
    TYPE <stype> (261) 31 32
    IF (262) 16
    ELSE (263) 17
    FOR (264) 23 24
    WHILE (265) 22
    PRINT (266) 28
    RETURN (267) 29 30
    AND (268) 42
    OR (269) 43
    EQ (270) 40
    NEQ (271) 41
    GT (272) 44
    LT (273) 45


Non-terminaux, suivis des règles où ils apparaissent

    $accept (31)
        à gauche: 0
    program (32)
        à gauche: 1
        à droite: 0
    declaration_list (33)
        à gauche: 2 3
        à droite: 1 2 14 15
    statement_list (34)
        à gauche: 4 5
        à droite: 1 4 13 15
    statement <state> (35)
        à gauche: 6 7 8 9 10 11
        à droite: 4 5 16 17 22 23 24
    compound_statement (36)
        à gauche: 12 13 14 15
        à droite: 6
    selection_statement <state> (37)
        à gauche: 16
        à droite: 7
    else (38)
        à gauche: 17 18
        à droite: 16
    begin_if (39)
        à gauche: 19
        à droite: 16
    end_if (40)
        à gauche: 20
        à droite: 16
    fi (41)
        à gauche: 21
        à droite: 16
    iteration_statement <state> (42)
        à gauche: 22 23 24
        à droite: 8
    expression_statement (43)
        à gauche: 25 26 27
        à droite: 9 23 24
    print_statement <state> (44)
        à gauche: 28
        à droite: 10
    return_statement (45)
        à gauche: 29 30
        à droite: 11
    declaration <state> (46)
        à gauche: 31 32
        à droite: 2 3
    expression <state> (47)
        à gauche: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        à droite: 16 22 24 26 27 28 30 32 33 34 35 36 37 38 39 40 41 42 43 44 45


État 0

    0 $accept: • program $end

    TYPE  décalage et aller à l'état 1

    program           aller à l'état 2
    declaration_list  aller à l'état 3
    declaration       aller à l'état 4


État 1

   31 declaration: TYPE • ID ';'
   32            | TYPE • ID '=' expression ';'

    ID  décalage et aller à l'état 5


État 2

    0 $accept: program • $end

    $end  décalage et aller à l'état 6


État 3

    1 program: declaration_list • statement_list
    2 declaration_list: declaration_list • declaration

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    TYPE     décalage et aller à l'état 1
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    statement_list        aller à l'état 18
    statement             aller à l'état 19
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    declaration           aller à l'état 26
    expression            aller à l'état 27


État 4

    3 declaration_list: declaration •

    $défaut  réduction par utilisation de la règle 3 (declaration_list)


État 5

   31 declaration: TYPE ID • ';'
   32            | TYPE ID • '=' expression ';'

    ';'  décalage et aller à l'état 28
    '='  décalage et aller à l'état 29


État 6

    0 $accept: program $end •

    $défaut  accepter


État 7

   46 expression: NUMBER •

    $défaut  réduction par utilisation de la règle 46 (expression)


État 8

   47 expression: BOOLEAN •

    $défaut  réduction par utilisation de la règle 47 (expression)


État 9

   27 expression_statement: ID • '=' expression ';'
   48 expression: ID •

    '='  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 48 (expression)


État 10

   16 selection_statement: IF • '(' expression ')' begin_if statement end_if else statement fi

    '('  décalage et aller à l'état 31


État 11

   23 iteration_statement: FOR • '(' expression_statement expression_statement ')' statement
   24                    | FOR • '(' expression_statement expression_statement expression ')' statement

    '('  décalage et aller à l'état 32


État 12

   22 iteration_statement: WHILE • '(' expression ')' statement

    '('  décalage et aller à l'état 33


État 13

   28 print_statement: PRINT • '(' expression ')' ';'

    '('  décalage et aller à l'état 34


État 14

   29 return_statement: RETURN • ';'
   30                 | RETURN • expression ';'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 36

    expression  aller à l'état 37


État 15

   12 compound_statement: '{' • '}'
   13                   | '{' • statement_list '}'
   14                   | '{' • declaration_list '}'
   15                   | '{' • declaration_list statement_list '}'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    TYPE     décalage et aller à l'état 1
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '}'      décalage et aller à l'état 38
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    declaration_list      aller à l'état 39
    statement_list        aller à l'état 40
    statement             aller à l'état 19
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    declaration           aller à l'état 4
    expression            aller à l'état 27


État 16

   33 expression: '(' • expression ')'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 41


État 17

   25 expression_statement: ';' •

    $défaut  réduction par utilisation de la règle 25 (expression_statement)


État 18

    1 program: declaration_list statement_list •
    4 statement_list: statement_list • statement

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 1 (program)

    statement             aller à l'état 42
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    expression            aller à l'état 27


État 19

    5 statement_list: statement •

    $défaut  réduction par utilisation de la règle 5 (statement_list)


État 20

    6 statement: compound_statement •

    $défaut  réduction par utilisation de la règle 6 (statement)


État 21

    7 statement: selection_statement •

    $défaut  réduction par utilisation de la règle 7 (statement)


État 22

    8 statement: iteration_statement •

    $défaut  réduction par utilisation de la règle 8 (statement)


État 23

    9 statement: expression_statement •

    $défaut  réduction par utilisation de la règle 9 (statement)


État 24

   10 statement: print_statement •

    $défaut  réduction par utilisation de la règle 10 (statement)


État 25

   11 statement: return_statement •

    $défaut  réduction par utilisation de la règle 11 (statement)


État 26

    2 declaration_list: declaration_list declaration •

    $défaut  réduction par utilisation de la règle 2 (declaration_list)


État 27

   26 expression_statement: expression • ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ';'  décalage et aller à l'état 55


État 28

   31 declaration: TYPE ID ';' •

    $défaut  réduction par utilisation de la règle 31 (declaration)


État 29

   32 declaration: TYPE ID '=' • expression ';'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 56


État 30

   27 expression_statement: ID '=' • expression ';'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 57


État 31

   16 selection_statement: IF '(' • expression ')' begin_if statement end_if else statement fi

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 58


État 32

   23 iteration_statement: FOR '(' • expression_statement expression_statement ')' statement
   24                    | FOR '(' • expression_statement expression_statement expression ')' statement

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    expression_statement  aller à l'état 59
    expression            aller à l'état 27


État 33

   22 iteration_statement: WHILE '(' • expression ')' statement

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 60


État 34

   28 print_statement: PRINT '(' • expression ')' ';'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 61


État 35

   48 expression: ID •

    $défaut  réduction par utilisation de la règle 48 (expression)


État 36

   29 return_statement: RETURN ';' •

    $défaut  réduction par utilisation de la règle 29 (return_statement)


État 37

   30 return_statement: RETURN expression • ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ';'  décalage et aller à l'état 62


État 38

   12 compound_statement: '{' '}' •

    $défaut  réduction par utilisation de la règle 12 (compound_statement)


État 39

    2 declaration_list: declaration_list • declaration
   14 compound_statement: '{' declaration_list • '}'
   15                   | '{' declaration_list • statement_list '}'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    TYPE     décalage et aller à l'état 1
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '}'      décalage et aller à l'état 63
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    statement_list        aller à l'état 64
    statement             aller à l'état 19
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    declaration           aller à l'état 26
    expression            aller à l'état 27


État 40

    4 statement_list: statement_list • statement
   13 compound_statement: '{' statement_list • '}'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '}'      décalage et aller à l'état 65
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    statement             aller à l'état 42
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    expression            aller à l'état 27


État 41

   33 expression: '(' expression • ')'
   34           | expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ')'  décalage et aller à l'état 66


État 42

    4 statement_list: statement_list statement •

    $défaut  réduction par utilisation de la règle 4 (statement_list)


État 43

   42 expression: expression AND • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 67


État 44

   43 expression: expression OR • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 68


État 45

   40 expression: expression EQ • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 69


État 46

   41 expression: expression NEQ • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 70


État 47

   44 expression: expression GT • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 71


État 48

   45 expression: expression LT • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 72


État 49

   34 expression: expression '+' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 73


État 50

   35 expression: expression '-' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 74


État 51

   36 expression: expression '*' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 75


État 52

   37 expression: expression '/' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 76


État 53

   38 expression: expression '%' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 77


État 54

   39 expression: expression '^' • expression

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 35
    '('      décalage et aller à l'état 16

    expression  aller à l'état 78


État 55

   26 expression_statement: expression ';' •

    $défaut  réduction par utilisation de la règle 26 (expression_statement)


État 56

   32 declaration: TYPE ID '=' expression • ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ';'  décalage et aller à l'état 79


État 57

   27 expression_statement: ID '=' expression • ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ';'  décalage et aller à l'état 80


État 58

   16 selection_statement: IF '(' expression • ')' begin_if statement end_if else statement fi
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ')'  décalage et aller à l'état 81


État 59

   23 iteration_statement: FOR '(' expression_statement • expression_statement ')' statement
   24                    | FOR '(' expression_statement • expression_statement expression ')' statement

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    expression_statement  aller à l'état 82
    expression            aller à l'état 27


État 60

   22 iteration_statement: WHILE '(' expression • ')' statement
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ')'  décalage et aller à l'état 83


État 61

   28 print_statement: PRINT '(' expression • ')' ';'
   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    AND  décalage et aller à l'état 43
    OR   décalage et aller à l'état 44
    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54
    ')'  décalage et aller à l'état 84


État 62

   30 return_statement: RETURN expression ';' •

    $défaut  réduction par utilisation de la règle 30 (return_statement)


État 63

   14 compound_statement: '{' declaration_list '}' •

    $défaut  réduction par utilisation de la règle 14 (compound_statement)


État 64

    4 statement_list: statement_list • statement
   15 compound_statement: '{' declaration_list statement_list • '}'

    NUMBER   décalage et aller à l'état 7
    BOOLEAN  décalage et aller à l'état 8
    ID       décalage et aller à l'état 9
    IF       décalage et aller à l'état 10
    FOR      décalage et aller à l'état 11
    WHILE    décalage et aller à l'état 12
    PRINT    décalage et aller à l'état 13
    RETURN   décalage et aller à l'état 14
    '{'      décalage et aller à l'état 15
    '}'      décalage et aller à l'état 85
    '('      décalage et aller à l'état 16
    ';'      décalage et aller à l'état 17

    statement             aller à l'état 42
    compound_statement    aller à l'état 20
    selection_statement   aller à l'état 21
    iteration_statement   aller à l'état 22
    expression_statement  aller à l'état 23
    print_statement       aller à l'état 24
    return_statement      aller à l'état 25
    expression            aller à l'état 27


État 65

   13 compound_statement: '{' statement_list '}' •

    $défaut  réduction par utilisation de la règle 13 (compound_statement)


État 66

   33 expression: '(' expression ')' •

    $défaut  réduction par utilisation de la règle 33 (expression)


État 67

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   42           | expression AND expression •
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 42 (expression)


État 68

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   43           | expression OR expression •
   44           | expression • GT expression
   45           | expression • LT expression

    EQ   décalage et aller à l'état 45
    NEQ  décalage et aller à l'état 46
    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 43 (expression)


État 69

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   40           | expression EQ expression •
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 40 (expression)


État 70

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   41           | expression NEQ expression •
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    GT   décalage et aller à l'état 47
    LT   décalage et aller à l'état 48
    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 41 (expression)


État 71

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   44           | expression GT expression •
   45           | expression • LT expression

    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 44 (expression)


État 72

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression
   45           | expression LT expression •

    '+'  décalage et aller à l'état 49
    '-'  décalage et aller à l'état 50
    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 45 (expression)


État 73

   34 expression: expression • '+' expression
   34           | expression '+' expression •
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 34 (expression)


État 74

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   35           | expression '-' expression •
   36           | expression • '*' expression
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    '*'  décalage et aller à l'état 51
    '/'  décalage et aller à l'état 52
    '%'  décalage et aller à l'état 53
    '^'  décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 35 (expression)


État 75

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   36           | expression '*' expression •
   37           | expression • '/' expression
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    $défaut  réduction par utilisation de la règle 36 (expression)


État 76

   34 expression: expression • '+' expression
   35           | expression • '-' expression
   36           | expression • '*' expression
   37           | expression • '/' expression
   37           | expression '/' expression •
   38           | expression • '%' expression
   39           | expression • '^' expression
   40           | expression • EQ expression
   41           | expression • NEQ expression
   42           | expression • AND expression
   43           | expression • OR expression
   44           | expression • GT expression
   45           | expression • LT expression

    $défaut  réduction par utilisation de la règle 37 (expression)


État 77
